--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node ./src/server.ts",
-    "start:nodemon": "npx nodemon",
+    "nodemon": "npx nodemon",
     "start:prod": "npm run build && node ./dist/src/server.js",
     "build": "npx tsc"
   },
@@ -26,5 +26,8 @@
     "prettier": "^3.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
