--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "woof_roof_back",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/src/server.js",
   "scripts": {
     "start": "ts-node ./src/server.ts",
     "nodemon": "npx nodemon",
@@ -13,12 +13,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "google-auth-library": "^9.0.0",
+    "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.2"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.5",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
